--- a/style/principeIncertitude.css
+++ b/style/principeIncertitude.css
@@ -72,8 +72,8 @@ canvas#atomAnimation:active {
   section#content > p#mainContent {
     position: relative;
     width: 100%;
-    top: -20vh;
-    height: 200%;
+    top: -10vh;
+    height: 250%;
   }
   p#title {
     left: 3vh;
@@ -97,8 +97,8 @@ canvas#atomAnimation:active {
   section#content > p#mainContent {
     position: relative;
     width: 100%;
-    top: -20vh;
-    height: 200%;
+    top: -10vh;
+    height: 250%;
   }
   p#title {
     left: 3vh;
